# hipTensor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  rtest.py  rtest.xml
.jenkins/: common.groovy
docs/install/: installation.rst
docs/sphinx/: requirements.txt
samples/: CMakeLists.txt
samples/02_permutation/: permutation.cpp
test/: CMakeLists.txt
test/03_reduction/: reduction_cpu_impl_test.cpp  reduction_test.cpp
tuning/: CMakeLists.txt
tuning/permutation/: CMakeLists.txt  permutation_instance.hpp  permutation_instance_2.cpp  permutation_instance_3.cpp  permutation_instance_4.cpp  permutation_instance_5.cpp  permutation_instance_6.cpp  permutation_instance_F16_2_256_128_128_16_16.cpp  permutation_instance_F16_2_256_128_128_32_32.cpp  permutation_instance_F16_2_256_128_128_8_8.cpp  permutation_instance_F16_2_256_64_64_16_16.cpp  permutation_instance_F16_2_256_64_64_4_4.cpp  permutation_instance_F16_2_miscellaneous.cpp  permutation_instance_F16_3_256_128_128_16_16.cpp  permutation_instance_F16_3_256_128_128_32_32.cpp  permutation_instance_F16_3_256_128_128_8_8.cpp  permutation_instance_F16_3_256_64_64_16_16.cpp  permutation_instance_F16_3_256_64_64_4_4.cpp  permutation_instance_F16_3_miscellaneous.cpp  permutation_instance_F16_4_256_128_128_16_16.cpp  permutation_instance_F16_4_256_128_128_32_32.cpp  permutation_instance_F16_4_256_128_128_8_8.cpp  permutation_instance_F16_4_256_64_64_16_16.cpp  permutation_instance_F16_4_256_64_64_4_4.cpp  permutation_instance_F16_4_miscellaneous.cpp  permutation_instance_F16_5_256_128_128_16_16.cpp  permutation_instance_F16_5_256_128_128_32_32.cpp  permutation_instance_F16_5_256_128_128_8_8.cpp  permutation_instance_F16_5_256_64_64_16_16.cpp  permutation_instance_F16_5_256_64_64_4_4.cpp  permutation_instance_F16_5_miscellaneous.cpp  permutation_instance_F16_6_256_128_128_16_16.cpp  permutation_instance_F16_6_256_128_128_32_32.cpp  permutation_instance_F16_6_256_128_128_8_8.cpp  permutation_instance_F16_6_256_64_64_16_16.cpp  permutation_instance_F16_6_256_64_64_4_4.cpp  permutation_instance_F16_6_miscellaneous.cpp  permutation_instance_F32_2_256_128_128_16_16.cpp  permutation_instance_F32_2_256_128_128_32_32.cpp  permutation_instance_F32_2_256_128_128_8_8.cpp  (+34 more)
tuning/permutation/scripts/: convert_to_cpp_pair.py  gen_performance_data.sh  gen_performance_data2.py  gen_performance_data3.py  gen_performance_data4.py  merge_top10.sh  parse_performance_data.sh  search_first_top_in_most_frequent.py  search_first_top_in_most_frequent_driver.sh
